<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/textviewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/missing" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:background="@drawable/ic_bg_input"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/_5"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/textviewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/expired" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:background="@drawable/ic_bg_input"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/_2"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/textviewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/damaged" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:background="@drawable/ic_bg_input"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/_3"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/textviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_missing_amount_18" />

        <TextView
            style="@style/textviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remaining_to_input_8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_18sdp"
            android:paddingVertical="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/btnBigStyle_break_down"
                android:background="@drawable/ic_btn_login"
                android:text="@string/cancel" />

            <View
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_1sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                style="@style/btnBigStyle_break_down"
                android:background="@drawable/ic_btn_login"
                android:text="@string/confirm" />

        </LinearLayout>

    </LinearLayout>

</layout>