<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            style="@style/textviewBigStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/under_picked_units" />

        <TextView
            style="@style/textviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/the_item_has_been_under_picked" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_18sdp"
            android:paddingVertical="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNo"
                style="@style/btnBigStyle_break_down"
                android:background="@drawable/ic_btn_login"
                android:text="@string/no" />

            <View
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_1sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYes"
                style="@style/btnBigStyle_break_down"
                android:background="@drawable/ic_btn_login"
                android:text="@string/yes" />

        </LinearLayout>

    </LinearLayout>

</layout>