<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            style="@style/textviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_scan_pallets_current" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/ic_bg_input"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/_19_a_1111"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_8sdp"
            android:textSize="@dimen/_11sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_18sdp"
            android:paddingVertical="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/btnBigStyle_break_down"
                android:background="@drawable/ic_btn_login"
                android:text="@string/cancel" />

            <View
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_1sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                style="@style/btnBigStyle_break_down"
                android:background="@drawable/ic_btn_login"
                android:text="@string/confirm" />

        </LinearLayout>

    </LinearLayout>

</layout>