<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            style="@style/textviewBigStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/over_picked_item" />

        <TextView
            style="@style/textviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/too_many_items_picked" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_18sdp"
            android:paddingVertical="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOk"
                style="@style/btnBigStyle_break_down"
                android:background="@drawable/ic_btn_login"
                android:text="@string/ok" />

        </LinearLayout>

    </LinearLayout>

</layout>