<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_bg">


    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/group" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_logo" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlMain"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_login"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_18sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/textviewStyle"
                        android:text="@string/welcome" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/textviewBigStyle"
                        android:text="@string/login" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edUsername"
                        style="@style/edittextviewNormalStyle"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:hint="@string/username" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edPassword"
                        style="@style/edittextviewPasswordStyle"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:drawableEnd="@drawable/ic_eye_gone"
                        android:drawablePadding="@dimen/_40sdp"
                        android:hint="@string/password"
                        android:paddingEnd="@dimen/_8sdp" />
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/btnBigStyle"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_70sdp"
                android:background="@drawable/ic_btn_login"
                android:text="@string/btn_login" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
