<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/llRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edithintcolor"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/pallet_14"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/priority_task"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_8sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/unique_upcs_10"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/total_units_120"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</layout>